// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@liferay/jest-junit-reporter writes a file for a failing test 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<testsuite errors=\\"0\\" failures=\\"1\\" hostname=\\"\\" id=\\"0\\" name=\\"Jest\\" package=\\"reporter-tests\\" skipped=\\"0\\" tests=\\"1\\" time=\\"0\\" timestamp=\\"1000\\">
  <testcase classname=\\"test-module.bar\\" name=\\"Field DocumentLibrary should not be readOnly\\" time=\\"0.046\\">
    <failure message=\\"Error: expect(received).toBe(expected) // Object.is equality\\">Error: expect(received).toBe(expected) // Object.is equality

Expected: false
Received: true
    at Object.&lt;anonymous&gt; (dynamic-data-mapping/dynamic-data-mapping-form-field-type/test/metal/js/KeyValue/KeyValue.es.js:70:18)
    at Object.asyncFn (dynamic-data-mapping/dynamic-data-mapping-form-field-type/node_modules/jest-jasmine2/build/jasmine_async.js:108:37)
    at resolve (dynamic-data-mapping/dynamic-data-mapping-form-field-type/node_modules/jest-jasmine2/build/queue_runner.js:56:12)
    at new Promise (&lt;anonymous&gt;)
    at mapper (dynamic-data-mapping/dynamic-data-mapping-form-field-type/node_modules/jest-jasmine2/build/queue_runner.js:43:19)
    at promise.then (dynamic-data-mapping/dynamic-data-mapping-form-field-type/node_modules/jest-jasmine2/build/queue_runner.js:87:41)
    at &lt;anonymous&gt;
    at process._tickCallback (internal/process/next_tick.js:182:7)</failure>
  </testcase>
</testsuite>"
`;

exports[`@liferay/jest-junit-reporter writes a file for a failing test suite 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<testsuite errors=\\"0\\" failures=\\"0\\" hostname=\\"\\" id=\\"0\\" name=\\"Jest\\" package=\\"reporter-tests\\" skipped=\\"0\\" tests=\\"1\\" time=\\"0\\" timestamp=\\"1000\\">
  <testcase classname=\\"test-module.bar\\" name=\\"/foo/bar/liferay-portal/modules/apps/test-module/bar/Baz.js\\" time=\\"0\\">
    <failure message=\\"Test Suite Failed to run\\">Test Suite Failed to run</failure>
  </testcase>
</testsuite>"
`;

exports[`@liferay/jest-junit-reporter writes a file for a passing test 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<testsuite errors=\\"0\\" failures=\\"0\\" hostname=\\"\\" id=\\"0\\" name=\\"Jest\\" package=\\"reporter-tests\\" skipped=\\"0\\" tests=\\"1\\" time=\\"0\\" timestamp=\\"1000\\">
  <testcase classname=\\"test-module.bar\\" name=\\"Field DocumentLibrary should not be readOnly\\" time=\\"0.046\\">
  </testcase>
</testsuite>"
`;
